more work on tree widget

--- a/structs/tree_test.html
+++ b/structs/tree_test.html
@@ -14,7 +14,7 @@ See the COPYING file for details.
 <script src="../../../closure-library/closure/goog/base.js"></script>
 <script src="../../../my-deps.js"></script>
 <script>
-goog.require('recoil.structs.UniquePriorityQueueTest');
+goog.require('recoil.structs.TreeTest');
 </script>
 </head>
 <body>
