--- a/ui/widgets/treeview_test.html
+++ b/ui/widgets/treeview_test.html
@@ -76,7 +76,8 @@ See the COPYING file for details.
       var frp = new recoil.frp.Frp();
       var observer = new recoil.frp.VisibleObserver();
       treeView = new recoil.ui.widgets.TreeView(frp, observer, $('treeViewContainer'));
-      treeView.attach()
+      var b = recoil.frp.struct.create(frp, {state : frp.createB(new recoil.structs.Tree("hello",[]))}); 
+      treeView.attach(b);
       createTreeFromTestData(tree, testData);
 
       tree.render($('treeContainer'));
