separate meta changes from table changes

--- a/ui/widgets/table/table_widget_test.html
+++ b/ui/widgets/table/table_widget_test.html
@@ -31,7 +31,7 @@
     };
 
     var rawTableMeta = {
-    name : { type : "string", primary: 1, length : 20, key : tblKeys.name},
+    name : { type : "string", length : 20, key : tblKeys.name},
     id : { type : "int", primary : 0, key : tblKeys.id},
     count : { type: "int", min : 1, max:100, key: tblKeys.count},
     check : { type: "bool", key: tblKeys.check}
