fix style try reduce lint errors below 100

--- a/ui/widgets/table/table_widget_test.html
+++ b/ui/widgets/table/table_widget_test.html
@@ -17,7 +17,11 @@
   <div id='addB'/>
   <div id='hideB'/>
   <div id='showB'/>
-  
+  TODO <br/>all decorators<br/>
+  remove rows<br/>
+  add in middle<br/>
+  cell renderers<br/>
+  selection<br/>
   
   <script>
     var scope = new recoil.ui.WidgetScope();
@@ -114,6 +118,7 @@
 
     
   </script>
+
 </body>
 
 </html>
