--- a/ui/widgets/widget_test.html
+++ b/ui/widgets/widget_test.html
@@ -17,6 +17,7 @@
 
 <body>
   <div id="numberW"/>
+  <input type="number"/>
   <script>
     var scope = new recoil.ui.WidgetScope();
     var frp = scope.getFrp();
