--- a/ui/widgets/table/table_widget_test.html
+++ b/ui/widgets/table/table_widget_test.html
@@ -10,6 +10,9 @@
   goog.require('recoil.ui.widgets.ButtonWidget');
   goog.require('recoil.ui.BoolWithExplaination');
   goog.require('recoil.ui.WidgetScope');
+  goog.require('recoil.ui.widgets.table.StringColumn');
+  goog.require('recoil.ui.widgets.table.NumberColumn');
+  goog.require('recoil.ui.widgets.table.BooleanColumn');
 </script>
 <style>
   .recoil_table_selected {background-color:green;}
