fixed loop in switchB

--- a/ui/widgets/table/table_widget_test.html
+++ b/ui/widgets/table/table_widget_test.html
@@ -154,7 +154,7 @@
     columns.add(tblKeys.name, "Name");
     //columns.add(tblKeys.count, "Count");
     columns.add(tblKeys.check, "Check");
-    switchB.set(columns.columnsB());
+    switchB.set(columns.createB(frp));
     },switchB));
 
     var selectedB = tableWidget.createSelected();
