--- a/ui/widgets/table/table_widget_test.html
+++ b/ui/widgets/table/table_widget_test.html
@@ -98,7 +98,7 @@
         return new recoil.ui.widgets.table.BooleanColumn(meta);
     }};
 
-    var table = recoil.frp.debug.debug("TABLE",frp.createB(recoil.structs.table.Table.create(typeFactories, rawTableMeta, rawTable)));
+    var table = frp.createB(recoil.structs.table.Table.create(typeFactories, rawTableMeta, rawTable));
      var tableWidget = new recoil.ui.widgets.table.TableWidget(scope);
 
     console.log('table', $('tablediv'), tableWidget.getComponent().getElement());
@@ -131,7 +131,7 @@
     mtable.addRow(row);
     table.set(mtable.freeze());
     }, table));
-			tableWidget.attach(table,recoil.frp.debug.debug("COLUMS", columnsB));
+			tableWidget.attach(table, columnsB);
 			
     var hideWidget = new recoil.ui.widgets.ButtonWidget(scope);
     var hideHeadersWidget = new recoil.ui.widgets.ButtonWidget(scope);
