--- a/ui/widgets/textarea_test.html
+++ b/ui/widgets/textarea_test.html
@@ -21,8 +21,11 @@
 </head>
 <body>
 
-<div id="textarea1"></div>
-<div id="textarea2"></div>
+<div>
+    <div id="textarea1-label"/>
+    <div id="textarea1"></div>
+</div>
+
 
 <script>
     var scope = new recoil.ui.WidgetScope();
@@ -31,13 +34,10 @@
 
     var val = frp.createB("test");
 
-    var ta1 = new recoil.ui.widgets.TextAreaWidget(scope);
-    ta1.getComponent().render($('textarea1'));
-    ta1.attach('ta1', val, true);
-
-    var ta2 = new recoil.ui.widgets.TextAreaWidget(scope);
-    ta2.getComponent().render($('textarea2'));
-    ta2.attach('ta2', val, true);
+    var talabel = new recoil.ui.widgets.TextAreaWidget(scope);
+    talabel.attach(val, val);
+    talabel.getLabel().getComponent().render($('textarea1-label'));
+    talabel.getComponent().render($('textarea1'));
 
 </script>
 </body>
