Continuing password widget.

--- a/ui/widgets/password_test.html
+++ b/ui/widgets/password_test.html
@@ -35,9 +35,10 @@
     var val = frp.createB("test");
 
     var password = new recoil.ui.widgets.PasswordWidget(scope);
-    password.attach(val, val, true);
-    password.getComponent();
-    password.getLabel().getComponent().render($('password'));
+    password.attach('Password', val, val, true);
+    password.getLabel().render($('label'));
+    password.getInput().render($('password'));
+//    password.getLabel().getComponent().render($('password'));
 
 </script>
 </body>
