--- a/ui/widgets/password_test.html
+++ b/ui/widgets/password_test.html
@@ -35,9 +35,12 @@
     var val = frp.createB("test");
 
     var password = new recoil.ui.widgets.PasswordWidget(scope);
-    password.attach('Password', val, val, true);
-    password.getLabel().render($('label'));
-    password.getInput().render($('password'));
+    password.attach(val, val, true);
+
+//    var label = password.getLabel().getComponent();
+//    label.setLabel("Password");
+//    label.render($('label'));
+    password.getComponent().render($('password'));
 //    password.getLabel().getComponent().render($('password'));
 
 </script>
