Continued with passwordwidget

--- a/ui/widgets/password_test.html
+++ b/ui/widgets/password_test.html
@@ -22,7 +22,7 @@
 <body>
 
 <div>
-    <div id="label"/>
+    <div id="label"></div>
     <div id="password"></div>
 </div>
 
@@ -37,11 +37,11 @@
     var password = new recoil.ui.widgets.PasswordWidget(scope);
     password.attach(val, val, true);
 
-//    var label = password.getLabel().getComponent();
-//    label.setLabel("Password");
-//    label.render($('label'));
+    var label = password.getLabel();
+    label.attach('Password', true);
+
+    label.getComponent().render($('label'));
     password.getComponent().render($('password'));
-//    password.getLabel().getComponent().render($('password'));
 
 </script>
 </body>
