Password widget fixed up and minor changes to button widget.

--- a/ui/widgets/button_test.html
+++ b/ui/widgets/button_test.html
@@ -86,7 +86,7 @@ See the COPYING file for details.
 
       var button = new recoil.ui.widgets.ButtonWidget(scope); 
       button.attach(b);
-      button.setComponent($("buttonWidget"));
+//      button.setComponent($("buttonWidget"));
 
       var elapsed = goog.debug.Trace.stopTracer(tracerId);
       logger.info('Trace:\n' + goog.debug.Trace.getFormattedTrace());
